Created login and signup section...

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="theme-color" content="#0c2246">
+    <link rel="manifest" href="/manifest.webmanifest">
+    <meta name="Description" content="Completely free web hosting with unlimited disk space and bandwidth.Just click signup button to get started.">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>logo.png">
     <title>HOSTERX.ML</title>
